--- a/blog.html
+++ b/blog.html
@@ -1,110 +1,98 @@
-
-Copy code
 <!doctype html>
 <html class="no-js" lang="zxx">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Fashion | Vision Board</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
-    <!-- CSS here -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/flaticon.css">
-    <link rel="stylesheet" href="assets/css/progressbar_barfiller.css">
-    <link rel="stylesheet" href="assets/css/gijgo.css">
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/animated-headline.css">
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/nice-select.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Fashion | Vision Board</title>
+  <meta name="description" content="Explore inspiring collections on our Vision Board to spark your creativity and style.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+
+  <!-- CSS here -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/css/slicknav.css">
+  <link rel="stylesheet" href="assets/css/flaticon.css">
+  <link rel="stylesheet" href="assets/css/progressbar_barfiller.css">
+  <link rel="stylesheet" href="assets/css/gijgo.css">
+  <link rel="stylesheet" href="assets/css/animate.min.css">
+  <link rel="stylesheet" href="assets/css/animated-headline.css">
+  <link rel="stylesheet" href="assets/css/magnific-popup.css">
+  <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="assets/css/themify-icons.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
+  <link rel="stylesheet" href="assets/css/nice-select.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="full-wrapper">
-    <!-- Header Start -->
-    <header>
-        <div class="header-area ">
-            <div class="main-header header-sticky">
-                <div class="container-fluid">
-                    <div class="menu-wrapper d-flex align-items-center justify-content-between">
-                        <div class="header-left d-flex align-items-center">
-                            <!-- Logo -->
-                            <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
-                            </div>
-                            <!-- Main-menu -->
-                            <div class="main-menu  d-none d-lg-block">
-                                <nav>
-                                    <ul id="navigation">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="shop.html">shop</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="vision_board.html">Vision Board</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <!-- Header Start -->
+  <header>
+    <div class="header-area ">
+      <div class="main-header header-sticky">
+        <div class="container-fluid">
+          <div class="menu-wrapper d-flex align-items-center justify-content-between">
+            <div class="header-left d-flex align-items-center">
+              <!-- Logo -->
+              <div class="logo">
+                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+              </div>
+              <!-- Main-menu -->
+              <div class="main-menu  d-none d-lg-block">
+                <nav>
+                  <ul id="navigation">
+                    <li><a href="index.html">Home</a></li> 
+                    <li><a href="shop.html">shop</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="vision_board.html">Vision Board</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                  </ul>
+                </nav>
+              </div>   
             </div>
+          </div>
         </div>
-    </header>
-    <!-- Header End -->
+      </div>
+    </div>
+  </header>
+  <!-- Header End -->
 
-    <main>
-        <!-- Breadcrumb Start-->
-        <div class="page-notification page-notification2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Vision Board</li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
+  <main>
+    <!-- breadcrumb Start-->
+    <div class="page-notification page-notification2">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb justify-content-center">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Vision Board</li> 
+              </ol>
+            </nav>
+          </div>
         </div>
-        <!-- Breadcrumb End -->
+      </div>
+    </div>
+    <!-- breadcrumb End-->
 
-        <!-- Vision Board Area Start-->
-        <section class="vision_board_area section-padding">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="vision_board_wrapper">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img src="assets/img/vision/vis1.png" alt="Vision Image 1" class="img-fluid">
-                                </div>
-                                <div class="col-md-4">
-                                    <img src="assets/img/vision/vis2.png" alt="Vision Image 2" class="img-fluid">
-                                </div>
-                                <div class="col-md-4">
-                                    <img src="assets/img/vision/vis3.png" alt="Vision Image 3" class="img-fluid">
-                                </div>
-                                <div class="col-md-4">
-                                    <img src="assets/img/vision/vis4.png" alt="Vision Image 4" class="img-fluid">
-                                </div>
-                                <div class="col-md-4">
-                                    <img src="assets/img/vision/vis5.png" alt="Vision Image 5" class="img-fluid">
-                                </div>
-                                <div class="col-md-4">
-                                    <img src="assets/img/vision/vis6.png" alt="Vision Image 6" class="img-fluid">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <!-- Vision Board Area Start -->
+    <section class="vision_board_area section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="vision_board_wrapper">
+              <div class="row">
+                <!-- Displaying 6 inspiration images -->
+                <div class="col-md-4"><img src="assets/img/vision/vis1.png" alt="Vision Image 1" class="img-fluid"></div>
+                <div class="col-md-4"><img src="assets/img/vision/vis2.png" alt="Vision Image 2" class="img-fluid"></div>
+                <div class="col-md-4"><img src="assets/img/vision/vis3.png" alt="Vision Image 3" class="img-fluid"></div>
+                <div class="col-md-4"><img src="assets/img/vision/vis4.png" alt="Vision Image 4" class="img-fluid"></div>
+                <div class="col-md-4"><img src="assets/img/vision/vis5.png" alt="Vision Image 5" class="img-fluid"></div>
+                <div class="col-md-4"><img src="assets/img/vision/vis6.png" alt="Vision Image 6" class="img-fluid"></div>
+              </div>
             </div>
-        </section>
-        <!-- Vision Board Area End -->
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Vision Board Area End -->
