--- a/about.html
+++ b/about.html
@@ -264,6 +264,16 @@ Each section of our story is a piece of Gurisa’s identity, reflecting our dedi
                                <p>Timeless pieces with a focus on comfort. All our shoes are made ethically, using noble leathers and padded insoles.</p>
                            </div>
                        </div>
+                       <style>
+                        /* Styles to resize the logo */
+                        .footer-logo img {
+                            width: calc(100% - 96px); /* Reduces the width by 96 pixels */
+                            height: auto; /* Keeps the aspect ratio intact */
+                            margin-top: 24px; /* Adds margin to top, effectively reducing height visually by 48 pixels */
+                        }
+                    </style>
+                    </head>
+                    <body>
                        <!-- social -->
                        <div class="footer-social">
                         <a href="#"><i class="fab fa-twitter"></i></a>
