--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             <div class="popular-img">
                                 <img src="assets/img/gallery/popular1.png" alt="">
                                 <div class="img-cap">
-                                    <span>Glasses</span>
+                                    <span>Leather Boots</span>
                                 </div>
                                 <div class="favorit-items">
                                  <a href="shop.html" class="btn">Shop Now</a>
@@ -235,7 +235,7 @@
                 <div class="popular-img">
                     <img src="assets/img/gallery/popular4.png" alt="">
                     <div class="img-cap">
-                        <span>Clothes</span>
+                        <span>Popular Shoes</span>
                     </div>
                     <div class="favorit-items">
                      <a href="shop.html" class="btn">Shop Now</a>
