--- a/shop.html
+++ b/shop.html
@@ -384,7 +384,7 @@
                     <div class="popular-img">
                         <img src="assets/img/gallery/popular1.png" alt="">
                         <div class="img-cap">
-                            <span>Glasses</span>
+                            <span>Leather Boots</span>
                         </div>
                         <div class="favorit-items">
                             <a href="shop.html" class="btn">Shop Now</a>
@@ -397,7 +397,7 @@
                     <div class="popular-img">
                         <img src="assets/img/gallery/popular2.png" alt="">
                         <div class="img-cap">
-                            <span>Watches</span>
+                            <span>Shoes</span>
                         </div>
                         <div class="favorit-items">
                          <a href="shop.html" class="btn">Shop Now</a>
@@ -410,7 +410,7 @@
                 <div class="popular-img">
                     <img src="assets/img/gallery/popular3.png" alt="">
                     <div class="img-cap">
-                        <span>Jackets</span>
+                        <span>Boots/span>
                     </div>
                     <div class="favorit-items">
                      <a href="shop.html" class="btn">Shop Now</a>
@@ -423,7 +423,7 @@
             <div class="popular-img">
                 <img src="assets/img/gallery/popular4.png" alt="">
                 <div class="img-cap">
-                    <span>Clothes</span>
+                    <span>Shoes</span>
                 </div>
                 <div class="favorit-items">
                  <a href="shop.html" class="btn">Shop Now</a>
