--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         <img src="assets/img/gallery/popular-imtes1.png" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
+                        <p><a href="product_details.html">Luxury Handcrafter Leather<br> Shoes Awaits</a></p>
                         <a href="product_details.html" class="btn">Read More</a>
                     </div>
                 </div>
@@ -470,7 +470,7 @@
                         <img src="assets/img/gallery/popular-imtes2.png" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
+                        <p><a href="product_details.html">Experience Elegance with<br> Argentine Craftmanship</a></p>
                         <a href="product_details.html" class="btn">Read More</a>
                     </div>
                 </div>
