--- a/about.html
+++ b/about.html
@@ -58,6 +58,14 @@
                                         <li><a href="shop.html">shop</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="blog.html">Blog</a>
+                                            <ul class="submenu">
+                                                <li><a href="blog.html">Blog</a></li>
+                                                <li><a href="blog_details.html">Blog Details</a></li>
+                                                <li><a href="elements.html">Elements</a></li>
+                                                <li><a href="product_details.html">Product Details</a></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </nav>
                             </div>   
